fix: correct spacing for entity bar

--- a/client/main.css
+++ b/client/main.css
@@ -3,10 +3,11 @@
   float: left;
   height: 100%;
   width: 10%;
-  margin: 10px;
 }
 #main {
-  margin: 10px;
+  float: right;
+  height: 100%;
+  width: 90%;
 }
 html, body {
   height: 100%;
